Make RuntimeHelpers::numberToString() comply with EcmaScript

We could use DoubleToStringConverter::EcmaScriptConverter().ToShortest()
here, but we'd have to #ifdef it for the case that we're using the libc
double conversion. As the formatting does not produce a lot of code I
decided against that.

Task-number: QTBUG-50131
Change-Id: If7a2ef8063b57ab35cda4a60d8ddd65442d70103
Reviewed-by: Lars Knoll <lars.knoll@theqtcompany.com>